상세 페이지 main, detaile 이미지 가져오기 ui 수정

--- a/app/src/main/res/layout/detailpage_activity_main_review.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_review.xml
@@ -145,7 +145,7 @@
                 android:background="@color/white" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/mainImage"
                 android:layout_width="273dp"
                 android:layout_height="203dp"
                 android:layout_marginStart="65dp"
