--- a/app/src/main/res/layout/detailpage_activity_main.xml
+++ b/app/src/main/res/layout/detailpage_activity_main.xml
@@ -124,20 +124,20 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ScrollView
-        android:layout_width="410dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:fillViewport="true"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="58dp">
 
-        <RelativeLayout
+
+    <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <View
+        <View
                 android:id="@+id/view"
                 android:layout_width="match_parent"
                 android:layout_height="239dp"
@@ -145,11 +145,11 @@
                 android:background="@color/white" />
 
             <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="273dp"
-                android:layout_height="203dp"
+                android:id="@+id/mainImage"
+                android:layout_width="290dp"
+                android:layout_height="213dp"
                 android:layout_marginStart="65dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/category_ad" />
 
 
@@ -335,23 +335,38 @@
                 android:background="@color/white" />
 
             <ImageView
-                android:id="@+id/imageView8"
-                android:layout_width="260dp"
-                android:layout_height="249dp"
-                android:layout_above="@id/view7"
-                android:layout_marginStart="75dp"
-                android:layout_marginBottom="-311dp"
+                android:id="@+id/detailedImage1"
+                android:layout_width="220dp"
+                android:layout_height="185dp"
+                android:layout_below="@id/view7"
+                android:layout_marginStart="100dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="1dp"
                 android:src="@drawable/category_ad"/>
 
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="258dp"
-                android:layout_height="68dp"
-                android:layout_above="@id/view7"
-                android:layout_marginStart="90dp"
-                android:layout_marginBottom="-389dp"
-                android:text="옷 설명"
-                android:textColor="#FF000000"/>
+            <ImageView
+                android:id="@+id/detailedImage2"
+                android:layout_width="220dp"
+                android:layout_height="185dp"
+                android:layout_below="@id/detailedImage1"
+                android:layout_marginStart="100dp"
+                android:layout_marginBottom="1dp"
+                android:src="@drawable/category_ad"/>
+
+            <ImageView
+                android:id="@+id/detailedImage3"
+                android:layout_width="220dp"
+                android:layout_height="185dp"
+                android:layout_below="@id/detailedImage2"
+                android:layout_marginStart="100dp"
+                android:layout_marginBottom="1dp"
+                android:src="@drawable/category_ad"/>
+
+            <View
+                android:id="@+id/lastView"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
 
         </RelativeLayout>
