--- a/app/src/main/res/layout/mypage_activity_delivery_address_manage.xml
+++ b/app/src/main/res/layout/mypage_activity_delivery_address_manage.xml
@@ -56,8 +56,10 @@
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_delivery_address_plus"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header_title" />
+        app:layout_constraintTop_toBottomOf="@+id/header_title"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btn_delivery_address_plus"
