--- a/app/src/main/res/layout/mypage_activity_answer_list.xml
+++ b/app/src/main/res/layout/mypage_activity_answer_list.xml
@@ -68,7 +68,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/answer_recyclerView"
-        android:layout_width="390dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
