--- a/app/src/main/res/layout/product_inquiry_page.xml
+++ b/app/src/main/res/layout/product_inquiry_page.xml
@@ -260,50 +260,38 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
 
-                <GridLayout
-                    android:id="@+id/gridLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="40dp"
-                    android:columnCount="2"
-                    android:rowCount="2"
-                    android:layout_alignBottom="@+id/view20"
-                    app:layout_constraintTop_toBottomOf="@+id/view20"
-                    app:layout_constraintBottom_toTopOf="@+id/editTextSubject"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
-
                 <RadioButton
                     android:id="@+id/radioButtonSize"
                     android:layout_width="165dp"
                     android:layout_height="37dp"
-                    android:layout_gravity="center"
                     android:text="사이즈"
-                    tools:ignore="TouchTargetSizeCheck" />
+                    android:layout_marginStart="50dp"/>
 
                 <RadioButton
                     android:id="@+id/radioButtonDelivery"
                     android:layout_width="165dp"
                     android:layout_height="37dp"
                     android:text="배송"
-                    tools:ignore="TouchTargetSizeCheck" />
+                    android:layout_marginStart="50dp" />
 
-                    <RadioButton
-                        android:id="@+id/radioButtonDetail"
-                        android:layout_width="165dp"
-                        android:layout_height="37dp"
-                        android:text="상세문의"
-                        tools:ignore="TouchTargetSizeCheck" />
+                <RadioButton
+                    android:id="@+id/radioButtonDetail"
+                    android:layout_width="165dp"
+                    android:layout_height="37dp"
+                    android:text="상세문의"
+                    android:layout_marginStart="220dp"
+                    android:layout_marginTop="-72dp" />
 
-                    <RadioButton
-                        android:id="@+id/radioButtonRestock"
-                        android:layout_width="165dp"
-                        android:layout_height="37dp"
-                        android:text="재입고"
-                        tools:ignore="TouchTargetSizeCheck" />
-                </GridLayout>
+                <RadioButton
+                    android:id="@+id/radioButtonRestock"
+                    android:layout_width="165dp"
+                    android:layout_height="37dp"
+                    android:text="재입고"
+                    android:layout_marginStart="220dp"
+                    android:layout_marginTop="0dp"/>
 
             </RadioGroup>
+
 
             <EditText
                 android:id="@+id/editTextSubject"
