--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -23,6 +23,15 @@
         app:layout_constraintVertical_bias="0.032"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/manage_btn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="184dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintBottom_toTopOf="@+id/magic_shop"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <TextView
         android:id="@+id/magic_shop"
         android:layout_width="140dp"
