--- a/app/src/main/res/layout/mypage_activity_exchange_list.xml
+++ b/app/src/main/res/layout/mypage_activity_exchange_list.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToOutline="true"
     android:orientation="vertical">
 
     <Button
@@ -20,26 +19,13 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
-    <Button
-        android:id="@+id/btn_home"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="360dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/mypage_btn_home"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.01"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
-
     <TextView
         android:id="@+id/header_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="26dp"
-        android:text="환불/교환 조회"
+        android:text="환불/교환"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -48,11 +34,43 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
+    <Button
+        android:id="@+id/btn_refund_list"
+        android:layout_width="205dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/mypage_btn_bottom_border_unclicked"
+        android:text="환불"
+        android:textSize="20sp"
+        android:paddingBottom="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+    <Button
+        android:id="@+id/btn_exchange_list"
+        android:layout_width="205dp"
+        android:layout_height="44dp"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/mypage_btn_bottom_border_clicked"
+        android:paddingBottom="10dp"
+        android:text="교환"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/refund_exchange_recyclerView"
-        android:layout_width="390dp"
+        android:id="@+id/exchange_recyclerView"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
