--- a/app/src/main/res/layout/mypage_activity_order_delivery_list.xml
+++ b/app/src/main/res/layout/mypage_activity_order_delivery_list.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="26dp"
-        android:text="주문/배송 조회"
+        android:text="주문 내역 조회"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
