--- a/app/src/main/res/layout/detailpage_activity_main_size.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_size.xml
@@ -342,7 +342,7 @@
                 android:background="@color/white"/>
 
             <ImageView
-                android:id="@+id/imageView8"
+                android:id="@+id/sizeImage"
                 android:layout_width="260dp"
                 android:layout_height="249dp"
                 android:layout_above="@id/view7"
@@ -350,14 +350,6 @@
                 android:layout_marginBottom="-311dp"
                 android:src="@drawable/category_ad"/>
 
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="258dp"
-                android:layout_height="68dp"
-                android:layout_above="@id/view7"
-                android:layout_marginStart="90dp"
-                android:layout_marginBottom="-389dp"
-                android:text="옷 설명" />
 
         </RelativeLayout>
     </ScrollView>
