--- a/app/src/main/res/layout/mypage_activity_main.xml
+++ b/app/src/main/res/layout/mypage_activity_main.xml
@@ -171,8 +171,9 @@
     <Button
         android:id="@+id/category_search_id"
         android:layout_width="33.75dp"
-        android:layout_height="33.75dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="8dp"
+        app:layout_constraintDimensionRatio="1:1"
         android:background="@drawable/category_search"
         app:layout_constraintBottom_toBottomOf="@+id/bar_rectangle_id"
         app:layout_constraintEnd_toEndOf="parent"
