--- a/app/src/main/res/layout/basket_item.xml
+++ b/app/src/main/res/layout/basket_item.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.496" />
 
-    <Button
+    <ImageView
         android:id="@+id/btn_product_id1"
         android:layout_width="123dp"
         android:layout_height="149dp"
