--- a/app/src/main/res/layout/detailpage_activity_main_obtion_select.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_obtion_select.xml
@@ -42,7 +42,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <android.widget.Button
-        android:id="@+id/btn_color"
+        android:id="@+id/btn_color1"
         android:layout_width="386dp"
         android:layout_height="52dp"
         android:layout_marginStart="13dp"
@@ -51,7 +51,26 @@
         android:layout_marginBottom="315dp"
         android:background="#FFFFFFFF"
         android:gravity="center"
-        android:text="검정"
+        android:text="Black"
+        android:textAlignment="center"
+        android:textSize="19sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <android.widget.Button
+        android:id="@+id/btn_color2"
+        android:layout_width="386dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="394dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="240dp"
+        android:background="#FFFFFFFF"
+        android:gravity="center"
+        android:text="White"
         android:textAlignment="center"
         android:textSize="19sp"
         android:textStyle="bold"
