--- a/app/src/main/res/layout/detailpage_activity_main_option_select_complete.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_option_select_complete.xml
@@ -209,34 +209,55 @@
         android:id="@+id/text_productName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="172dp"
         android:text="TextView"
         android:textColor="@color/black"
         android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_buy"
         app:layout_constraintStart_toEndOf="@+id/mainImage"
-        app:layout_constraintTop_toTopOf="@+id/view" />
+        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintVertical_bias="0.286" />
+
+    <TextView
+        android:id="@+id/text_brandName"
+        android:layout_width="87dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="136dp"
+        android:text="TextView"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/text_productName"
+        app:layout_constraintStart_toEndOf="@+id/mainImage"
+        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintVertical_bias="0.625" />
 
     <TextView
         android:id="@+id/text_productPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
         android:text="TextView"
         android:textColor="@color/black"
         android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintStart_toEndOf="@+id/mainImage"
-        app:layout_constraintTop_toBottomOf="@+id/text_productName" />
+        app:layout_constraintTop_toBottomOf="@+id/text_productName"
+        app:layout_constraintVertical_bias="0.012" />
 
     <ImageView
         android:id="@+id/mainImage"
         android:layout_width="154dp"
         android:layout_height="170dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="52dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_basket"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/color"
-        app:srcCompat="@drawable/category_component"
-        tools:layout_editor_absoluteX="27dp" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/category_component" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
