불필요 속성 및 메소드 및 클래스 제거 및 조금의 중복 없앰

--- a/app/src/main/res/layout/detailpage_activity_main_review.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_review.xml
@@ -173,7 +173,7 @@
                 android:layout_marginBottom="-36dp"
                 android:text="브랜드 이름"
                 android:textColor="#FF000000"
-                android:textSize="14dp" />
+                android:textSize="14sp" />
 
             <View
                 android:id="@+id/view3"
