--- a/app/src/main/res/layout/detailpage_activity_main_option_select_complete.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_option_select_complete.xml
@@ -146,7 +146,7 @@
         android:layout_marginBottom="332dp"
         android:text="색깔"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -164,7 +164,7 @@
         android:layout_marginBottom="373dp"
         android:text="선택한 옵션"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -181,7 +181,7 @@
         android:layout_marginBottom="332dp"
         android:text="사이즈"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/view"
@@ -196,7 +196,7 @@
         android:layout_marginTop="172dp"
         android:text="TextView"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_buy"
         app:layout_constraintStart_toEndOf="@+id/mainImage"
         app:layout_constraintTop_toTopOf="@+id/view"
@@ -210,7 +210,7 @@
         android:layout_marginTop="136dp"
         android:text="TextView"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/text_productName"
         app:layout_constraintStart_toEndOf="@+id/mainImage"
         app:layout_constraintTop_toTopOf="@+id/view"
@@ -224,7 +224,7 @@
         android:layout_marginTop="12dp"
         android:text="TextView"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintStart_toEndOf="@+id/mainImage"
         app:layout_constraintTop_toBottomOf="@+id/text_productName"
