--- a/app/src/main/res/layout/detailpage_activity_main_size.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_size.xml
@@ -169,7 +169,7 @@
                 android:layout_marginBottom="-36dp"
                 android:text="브랜드 이름"
                 android:textColor="#FF000000"
-                android:textSize="14dp" />
+                android:textSize="14sp" />
 
 
             <View
