주문 내역 조회, 장바구니 해결

--- a/app/src/main/res/layout/mypage_activity_review_write.xml
+++ b/app/src/main/res/layout/mypage_activity_review_write.xml
@@ -36,12 +36,11 @@
         tools:ignore="HardcodedText" />
 
     <ImageView
-        android:id="@+id/productImage"
+        android:id="@+id/productMainImage"
         android:layout_width="80dp"
         android:layout_height="100dp"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="80dp"
-        android:src="@drawable/mypage_clothes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +58,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/productImage"
+        app:layout_constraintStart_toEndOf="@+id/productMainImage"
         app:layout_constraintTop_toBottomOf="@+id/header_title" />
 
     <TextView
@@ -74,7 +73,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/productImage"
+        app:layout_constraintStart_toEndOf="@+id/productMainImage"
         app:layout_constraintTop_toBottomOf="@+id/sellerID" />
 
     <TextView
@@ -89,7 +88,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/productImage"
+        app:layout_constraintStart_toEndOf="@+id/productMainImage"
         app:layout_constraintTop_toBottomOf="@+id/productName" />
 
     <EditText
@@ -118,7 +117,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/productImage" />
+        app:layout_constraintTop_toBottomOf="@+id/productMainImage" />
 
     <Button
         android:id="@+id/btn_review_submit"
