--- a/app/src/main/res/layout/mypage_item_order.xml
+++ b/app/src/main/res/layout/mypage_item_order.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/order_date" />
 
     <TextView
-        android:id="@+id/order_userID"
+        android:id="@+id/order_brandName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -90,7 +90,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/productImage"
-        app:layout_constraintTop_toBottomOf="@id/order_userID" />
+        app:layout_constraintTop_toBottomOf="@id/order_brandName" />
 
     <Button
         android:id="@+id/btn_exchange"
